treafik/ingress-rule/cortex-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cortex-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`example.cortex.com`)
      kind: Rule
      services:
        - name: thehive
          port: 9001
