treafik/ingress-rule/rulewazuh.yml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashbord-wazuh
  namespace: wazuh
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: example.wazuh.com
    http:
      paths:
      - backend:
          service:
            name: dashbord
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - wazuh.apps.shaker242.lab
    secretName: wazuh-secret
