treafik/ingress-rule/thehive-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thehive-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`example.thehive.com`)
      kind: Rule
      services:
        - name: thehive
          port: 9000
