treafik/ingress-rule/wazuh-ing-rt-tcp3.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: wazuh-ingress-routetcp3
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`*`) && Path(`/`)
      services:
        - name: wazuh
          port: 55000
