treafik/ingress-rule/wazuh-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-ingress
spec:
  rules:
    - host: example.wazuh.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik-service
                port:
                  number: 80
